# personal-finance-tracker

./: .gitignore  CMakeLists.txt
src/: finance_resources.qrc  main.cpp
src/core/: transaction.cpp  transaction.h
src/data/: databasemanager.cpp  databasemanager.h  transactiondao.cpp  transactiondao.h
src/ui/qml/: Main.qml
src/ui/viewmodels/: transactionmodel.cpp  transactionmodel.h
